Fix multiple layout issues for small viewports and mobile throughout the site

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,9 +9,9 @@
   @apply bg-stone-950 bg-size-[36px_36px];
 }
 
-html {
+/* html {
   scrollbar-gutter: stable;
-}
+} */
 
 /* STYLES FOR RENDERED BLOG POSTS */
 
